--- a/src/app/main/chat/direct-chat/direct-chat.component.scss
+++ b/src/app/main/chat/direct-chat/direct-chat.component.scss
@@ -104,7 +104,8 @@
 
 .mobile-chat-container {
   height: calc(100vh - 80px);
-  position: fixed;
+  width: 100vw;
+  position: absolute;
   bottom: 0;
   display: flex;
   justify-content: center;
@@ -157,12 +158,49 @@
   }
 }
 
+.mobile-chat-owner-content-container {
+  position: absolute;
+  bottom: 200px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 18px;
+  box-sizing: border-box;
+}
+
+.mobile-chat-owner-name-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 24px;
+  gap: 8px;
+  padding-bottom: 12px;
+  > p {
+    font-size: 24px;
+    font-weight: 700;
+  }
+}
+
+.mobile-chat-owner-description-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 8px;
+  > p {
+    font-size: 20px;
+    font-weight: 400;
+  }
+}
+
+.mobile-chat-owner-description-name-text {
+  color: $icon-purple-hover;
+}
+
 .mobile-chat-content {
-  width: 100vw;
-  overflow-x: hidden;
+  width: 100%;
   max-height: calc(100vh - 280px);
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .mobile-chat-message-container-clicked {
@@ -202,8 +240,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: sticky;
   right: 120px;
-  margin-top: -12px;
+  margin-bottom: -40px;
+  width: 100%;
   gap: 5px;
   height: 46px;
   border-top-left-radius: 25px;
@@ -215,12 +255,12 @@
 
 .mobile-chat-edit-message-container-left {
   left: 120px;
-  width: 150px;
+  width: 140px;
 }
 
 .mobile-chat-edit-message-container-right {
-  right: 120px;
-  width: 200px;
+  margin-left: calc(100vw - 350px);
+  width: 190px;
 }
 
 .mobile-chat-edit-button-container {
@@ -239,9 +279,10 @@
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.08);
   font-size: 20px;
   font-weight: 500;
-  margin-left: calc(100vw - 550px);
+  margin-left: calc(100vw - 300px);
   width: 255px;
-  margin-bottom: -108px;
+  margin-top: 40px;
+  margin-bottom: -80px;
   z-index: 999 !important;
 }
 
@@ -285,6 +326,8 @@
   display: flex;
   justify-content: flex-start;
   margin-left: 16px;
+  z-index: 1;
+  gap: 8px;
 }
 
 .mobile-chat-message-container-from-me {
@@ -292,7 +335,22 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: row-reverse;
+  margin-left: 16px;
   margin-right: 16px;
+  z-index: 1;
+  gap: 8px;
+}
+
+.mobile-chat-message-container-from-me-edit-botton-vesible {
+  padding-top: 0px;
+  margin-top: -98px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  margin-left: 16px;
+  margin-right: 16px;
+  z-index: 1;
+  gap: 8px;
 }
 
 .mobile-chat-message-avatar-container {
@@ -307,11 +365,6 @@
   }
 }
 
-.mobile-chat-message-content {
-  margin-left: 18px;
-  margin-right: 18px;
-}
-
 .image-to-message-container {
   img {
     width: 100%;
@@ -322,6 +375,38 @@
     display: flex;
     justify-content: flex-end;
   }
+}
+
+.mobile-chat-message-name-date-container-from-others {
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+}
+
+.mobile-chat-message-name-date-container-me {
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+  flex-direction: row-reverse;
+}
+
+.mobile-chat-message-name {
+  font-size: 18px;
+  font-weight: 700;
+  color: $color-black;
+  cursor: pointer;
+}
+
+.mobile-chat-message-time {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.mobile-chat-message-text-container {
+  margin-top: 8px;
+  padding-top: 24px;
+  margin-bottom: 8px;
+  cursor: pointer;
 }
 
 .mobile-chat-message-edit-textarea {
@@ -373,38 +458,6 @@
   }
 }
 
-.mobile-chat-message-name-date-container-from-others {
-  display: flex;
-  align-items: flex-end;
-  gap: 12px;
-}
-
-.mobile-chat-message-name-date-container-me {
-  display: flex;
-  align-items: flex-end;
-  gap: 12px;
-  flex-direction: row-reverse;
-}
-
-.mobile-chat-message-name {
-  font-size: 18px;
-  font-weight: 700;
-  color: $color-black;
-  cursor: pointer;
-}
-
-.mobile-chat-message-time {
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.mobile-chat-message-text-container {
-  margin-top: 8px;
-  padding-top: 24px;
-  margin-bottom: 8px;
-  cursor: pointer;
-}
-
 .mobile-chat-message-from-others {
   background-color: $background-lightblue;
   max-width: 300px;
@@ -412,7 +465,6 @@
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  margin-right: 90px;
   overflow-wrap: anywhere;
 }
 
@@ -440,11 +492,11 @@
 
 .mobile-chat-input-field-container {
   width: 100%;
-  max-height: 145px;
+  min-height: 145px;
   padding-top: 4px;
   padding-bottom: 4px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   border: 1px solid $border-gray;
@@ -454,12 +506,13 @@
     max-width: 90%;
     min-height: 80px;
     font-size: 18px;
-    padding-top: 20px;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
     resize: none;
     background-position: right 24px top 16px;
     word-wrap: break-word;
-    font-family: Arial, 'TwemojiMozilla', sans-serif;
+    font-family: Arial, 'TwemojiMozilla';
   }
 }
 
@@ -473,6 +526,7 @@
 }
 
 .mobile-chat-input-icon-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -518,7 +572,6 @@
 }
 
 .mobile-chat-border-right {
-  position: relative;
   height: 40px;
   width: 45px;
   border-right: 1px solid $border-gray;
@@ -532,13 +585,61 @@
   }
 }
 
+.mobile-chat-message-thread-link-container {
+  display: flex;
+  gap: 10px;
+  height: 18px;
+  &:hover {
+    .mobile-chat-message-thread-link-number-content {
+      > p {
+        font-weight: 600;
+        color: $icon-blue;
+      }
+    }
+    .mobile-chat-message-thread-link-date-content {
+      > p {
+        color: $color-black;
+      }
+    }
+  }
+}
+
+.mobile-chat-message-thread-link-number-content {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+  > p {
+    display: flex;
+    white-space: nowrap;
+    overflow-wrap: normal;
+    font-size: 14px;
+    font-weight: 400;
+    color: $icon-purple-hover;
+  }
+}
+
+.mobile-chat-message-thread-link-date-content {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 1px;
+  > p {
+    display: flex;
+    white-space: nowrap;
+    overflow-wrap: normal;
+    font-size: 14px;
+    font-weight: 400;
+    color: $icon-gray;
+  }
+}
+
 .mobile-chat-message-reaction-right-container {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-bottom: 8px;
-  gap: 10px;
-  width: 100%;
+  gap: 8px;
   flex-wrap: wrap;
 }
 
@@ -583,6 +684,46 @@
     border-radius: 100%;
     &:hover {
       color: $background-purple;
+    }
+  }
+}
+
+.user-result-container {
+  background-color: #fff;
+  z-index: 99;
+  width: 100%;
+  min-height: 300px;
+  max-height: 400px;
+  overflow-x: scroll;
+  border-radius: 30px;
+  box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+
+  .user-content-container {
+    padding-right: 25px;
+    padding-left: 25px;
+    padding-top: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    .user-list {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      cursor: pointer;
+      border-radius: 30px;
+      padding: 4px 20px;
+
+      &:hover {
+        background-color: $background-lightblue;
+      }
+    }
+
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
     }
   }
 }
